change path script.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="countdown">
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
